Fri Jun  1 17:00:23 BST 2007
  * added in nested table support

Fri Jul 13 06:30:32 BST 2007
  * added a bit more documentation