@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         sapnwrfc
-version:      0.16
+version:      0.17
 version_from: sapnwrfc.pm
 installdirs:  site
 requires:
