@@ -1,7 +1,7 @@
 package SAPNW::RFC::Parameter;
 =pod
 
-    Copyright (c) 2006 - 2007 Piers Harding.
+    Copyright (c) 2006 - 2008 Piers Harding.
     All rights reserved.
 
 =cut
