@@ -1,7 +1,7 @@
 package SAPNW::Rfc;
 =pod
 
-    Copyright (c) 2006 - 2007 Piers Harding.
+    Copyright (c) 2006 - 2008 Piers Harding.
     All rights reserved.
 
 =cut
@@ -12,7 +12,7 @@ use Data::Dumper;
 
 =pod
 
-    Copyright (c) 2006 - 2007 Piers Harding.
+    Copyright (c) 2006 - 2008 Piers Harding.
         All rights reserved.
 
 =cut
