@@ -3,3 +3,6 @@ Fri Jun  1 17:00:23 BST 2007
 
 Fri Jul 13 06:30:32 BST 2007
   * added a bit more documentation
+
+Thu Jun 26 18:59:57 NZST 2008
+  * removed connection attributes that are nolonger supported
